validates input user - Challenge 1.2 Forms

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             <p>
                 <label for="subject">Sujet :</label>
-                    <select name="subject" id="subject">
+                    <select name="subject" id="subject" required>
                         <option value="">--Choississez un sujet--</option>
                         <option value="php-subject">PHP</option>
                         <option value="js-subject">JavaScript</option>
